--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </main>
     <footer>
         <p>️&copy; Read Song 2021</p>
-        <p>Produzido por João Victor e Marcos Felipe</p>
+        <p>Produzido por João Victor e <a href="https://github.com/marclipe">Marcos Felipe</a></p>
     </footer>
 
     <script>
